Commit the branch feat_wrap1.1

--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -14,8 +14,10 @@
         <Button Name="calculateButton" Content="_Calculate" HorizontalAlignment="Left" Height="37" Margin="327,152,0,0" VerticalAlignment="Top" Width="122" Click="calculateButton_Click"/>
         <Button Name="clearButton" Content="C_lear" HorizontalAlignment="Left" Height="34" Margin="327,209,0,0" VerticalAlignment="Top" Width="122" Click="clearButton_Click"/>
         <Button Name="closeButton" Content="Cl_ose" HorizontalAlignment="Left" Height="34" Margin="327,264,0,0" VerticalAlignment="Top" Width="122" Click="closeButton_Click"/>
-        <Label Content="Total Charege after adding &#xD;&#xA;the delivery charge($25)" HorizontalAlignment="Left" Margin="27,214,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.132,0"/>
-        <TextBlock x:Name="totalChargeTextBlock" HorizontalAlignment="Left" Margin="190,229,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="21" Width="65"/>
+        <Label Content="Total Charge after adding &#xA;the delivery charge($25)" HorizontalAlignment="Left" Margin="25,205,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.132,0"/>
+        <TextBlock x:Name="totalChargeTextBlock" HorizontalAlignment="Left" Margin="190,215,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="21" Width="65"/>
+        <Label Content="Total Charge after adding &#xD;&#xA;the wrap charge($5)" HorizontalAlignment="Left" Margin="27,258,0,0" VerticalAlignment="Top"/>
+        <TextBlock x:Name="wrapChargeTextBlock" HorizontalAlignment="Left" Height="25" Margin="190,270,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="80"/>
 
 
     </Grid>
