Commit the branch feat_GST1.2

--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -7,17 +7,19 @@
         <Label Content="Price $:" HorizontalAlignment="Left" Height="30" Margin="46,78,0,0" VerticalAlignment="Top" Width="61"/>
         <Label Content="Quantity:" HorizontalAlignment="Left" Height="30" Margin="48,113,0,0" VerticalAlignment="Top" Width="69" RenderTransformOrigin="0.371,0.498"/>
         <Label Content="Total Payment $:" HorizontalAlignment="Left" Height="30" Margin="46,160,0,0" VerticalAlignment="Top" Width="96"/>
-        <TextBlock Name="totalPaymentTextBlock" HorizontalAlignment="Left" Height="23" Margin="164,167,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
+        <TextBlock Name="totalPaymentTextBlock" HorizontalAlignment="Left" Height="23" Margin="185,162,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
         <TextBox Name="productTextBox" HorizontalAlignment="Left" Height="24" Margin="122,37,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="96"/>
         <TextBox Name="priceTextBox" HorizontalAlignment="Left" Height="24" Margin="122,78,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="77"/>
         <TextBox x:Name="quantityTextBox" HorizontalAlignment="Left" Height="24" Margin="122,119,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="77"/>
         <Button Name="calculateButton" Content="_Calculate" HorizontalAlignment="Left" Height="37" Margin="327,152,0,0" VerticalAlignment="Top" Width="122" Click="calculateButton_Click"/>
         <Button Name="clearButton" Content="C_lear" HorizontalAlignment="Left" Height="34" Margin="327,209,0,0" VerticalAlignment="Top" Width="122" Click="clearButton_Click"/>
         <Button Name="closeButton" Content="Cl_ose" HorizontalAlignment="Left" Height="34" Margin="327,264,0,0" VerticalAlignment="Top" Width="122" Click="closeButton_Click"/>
-        <Label Content="Total Charge after adding &#xA;the delivery charge($25)" HorizontalAlignment="Left" Margin="25,205,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.132,0"/>
-        <TextBlock x:Name="totalChargeTextBlock" HorizontalAlignment="Left" Margin="190,215,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="21" Width="65"/>
-        <Label Content="Total Charge after adding &#xD;&#xA;the wrap charge($5)" HorizontalAlignment="Left" Margin="27,258,0,0" VerticalAlignment="Top"/>
-        <TextBlock x:Name="wrapChargeTextBlock" HorizontalAlignment="Left" Height="25" Margin="190,270,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="80"/>
+        <Label Content="Total Charge after adding &#xA;the delivery charge($25)" HorizontalAlignment="Left" Margin="30,185,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.132,0"/>
+        <TextBlock x:Name="totalChargeTextBlock" HorizontalAlignment="Left" Margin="190,199,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="21" Width="65"/>
+        <Label Content="Total Charge after adding &#xD;&#xA;the wrap charge($5)" HorizontalAlignment="Left" Margin="32,230,0,0" VerticalAlignment="Top"/>
+        <TextBlock x:Name="wrapChargeTextBlock" HorizontalAlignment="Left" Height="25" Margin="190,235,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80"/>
+        <Label Content="Total Charge After GST @10%" HorizontalAlignment="Left" Margin="20,279,0,0" VerticalAlignment="Top"/>
+        <TextBlock x:Name="totalChargeAfterGSTTextBlock" HorizontalAlignment="Left" Margin="195,285,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
 
 
     </Grid>
